# ot-sae-alignment

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: PHASE_1_NOTES.md  POSTMORTEM_AND_NEXT_STEPS.md  PROJECT_PLAN_PHASE_1.md  PROJECT_STATUS_AND_HANDOFF.md  derivations.md  open_questions.md
docs/explainer/: 00_README.md  01_background_OT.md  02_background_GW.md  03_background_SAE.md  04_research_question.md  05_phase_1.md  06_phase_2.md  07_phase_3.md  08_phase_4a.md  09_phase_4a_bis.md  10_phase_4b.md  11_conclusion.md
notebooks/: 02_gromov_wasserstein.ipynb  03_sae_basics.ipynb  04_cross_layer_matching.ipynb
ot_primitives/: __init__.py  _legacy.py  _utils.py  closed_form.py  costs.py  divergence.py  exact.py  sinkhorn.py
ot_sae/: __init__.py  activations.py  evaluation.py  matching.py
results/: cost_vs_epsilon.json  phase4a_results.json  phase4a_seed_sweep.json  phase4b_unequal_size.json
scripts/: cost_vs_epsilon.py  phase4a_seed_sweep.py  phase4b_unequal_size.py  smoke_test.py
tests/: conftest.py  test_closed_form.py  test_costs.py  test_divergence.py  test_exact_ot.py  test_matching.py  test_phase0_smoke.py  test_sinkhorn.py  test_wasserstein_1d.py
