[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ot-primitives"
version = "0.1.0.dev0"
description = "Optimal transport primitives implemented from scratch — Phase 1 of OT-SAE alignment project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Adi Munot"}]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pot>=0.9.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff",
    "mypy",
    "nbstripout",
    "pre-commit",
    "matplotlib>=3.8",
    "jupyterlab>=4.0",
    "scikit-image>=0.22",
]

[tool.setuptools.packages.find]
include = ["ot_primitives*", "ot_sae*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line too long
    "N803",  # argument name should be lowercase (allow X, Y, C, etc. — math)
    "N806",  # variable in function should be lowercase (allow X, Y, C, etc. — math)
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E402"]
